--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="about.html">ABOUT</a>
+              <a class="nav-link" href="about.html">RESUME</a>
             </li>
 
             <li class="nav-item">
@@ -84,9 +84,11 @@
   <section class="sectionpadding col-md-12">
     <h3>Full-stack developer with a vision</h3>
     <p class="paddingtop">
-    <div><h4>Junior Full-Stack Developer</h4>
+    <div>
+      <h4>Generation Singapore/ Temasek Polytechnic</h4>
+      <h4>Junior Full-Stack Developer</h4>
     <p><i>Learner, 31 March 2022 - present</i></p>
-    <p>I underwent a 3-months bootcamp with Generation Singapore and Temasek Polytechnic where I learnt HTML, CSS, Bootstrap, JavaScript and Java.</p>
+    I am in a programme which consists of a 3-month bootcamp and a 6-month apprenticeship. I am gaining proficiency in HTML, CSS, Bootstrap, JavaScript,Java, mySQL, React and more. Besidess regular technical assessments, I am working on a group project and a few of my own projects.
     </div>
     
   </section>
