--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="about.html">ABOUT</a>
+              <a class="nav-link" href="about.html">RESUME</a>
             </li>
 
             <li class="nav-item">
@@ -98,7 +98,7 @@
 
       <div><h4>Minute Craft</h4>
         <p><i>Minimalist, light, elegant</i></p>
-        <p>I designed and coded the common stylesheet and the homepage for Pandora's box, an e-commerce site which was part of a group project during the bootcamp. The site serves to sell subscription boxes. The site design for this site is derived from Pandora's Box.</p>
+        <p>A portfolio site I created for my friend, Amanda, who knots bracelets. The site features an extensive collection of her bracelets, where you can filter your search by colour, type or date made. It also has an e-commerce section.</p>
         </div>
 
     <div><h3>Other Projects</h3>
